# krunch

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build_push_docker_image.sh  commands.txt  release.sh  sa-and-crb.yaml  skaffold.yaml
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: build_image.rs  init.rs  krunch.rs  main.rs
client/src/krunch/: bomb.rs  commands_host.rs  execute_command.rs  init.rs  mod.rs  mount.rs  pod_command.rs
client/src/static/: Dockerfile
demo/: Dockerfile  index.html  skaffold.yaml
demo/kubectl/: deployment.yaml  ingress.yaml  service.yaml
helm/playground/: Chart.yaml  values.yaml
helm/playground/templates/: deployment.yaml
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: http_responses.rs  main.rs
server/src/handlers/: mod.rs
src/: const.rs  krunch.rs  main.rs
src/cli_init/: bin_folder_to_path.rs  commands.rs  create_tls_secret.rs  dns_for_minikube.rs  docker_to_minikube.rs  download_binaries.rs  downloads.rs  enable_ingress.rs  environment.rs  k8s.rs  mod.rs
src/cli_install/: bin_folder_to_path.rs  create_ca_and_tls.rs  create_tls_secret.rs  dns_for_minikube.rs  docker_to_minikube.rs  download_binaries.rs  download_urls.rs  enable_ingress.rs  get_versions.rs  mod.rs
src/cli_remove/: mod.rs  remove_binaries.rs  remove_ca_and_tls.rs  remove_dns_for_minikube.rs  remove_environment_entries.rs  remove_tls_secret.rs
src/downloads/: mod.rs  urls.rs
src/init/: commands.rs  downloads.rs  environment.rs  k8s.rs  mod.rs  urls.rs
src/installer/: mod.rs  urls.rs
src/krunch/: _bomb.rs  command.rs  commands.rs  download.rs  downloads.rs  environment.rs  init.rs  k8s.rs  mkcert.rs  mod.rs  mount.rs
src/mkcert/: mkcert-v1.4.4-darwin-amd64  mkcert-v1.4.4-darwin-arm64  mkcert-v1.4.4-linux-amd64
src/shared/: commands.rs  consts.rs  download_urls.rs  file_folder_paths.rs  mod.rs  windows_registry.rs
src/version/: mod.rs
