[package]
name = "krunch"
version = "0.4.0"
authors = ["Timo Wuttke <timo.wuttke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.17"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.4"
anyhow = { version = "1.0.70", features = ["backtrace"] }
kube = { version = "0.82.2", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
base64 = "0.21.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.17", features = ["stream"] }
tempfile = "3.5.0"
home = "0.5.5"
flate2 = "1.0.26"
tar = "0.4.38"
zip = "0.6.4"
walkdir = "2.3.3"
clap = { version = "4.2.5", features = ["derive"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
terminal_size = "0.2.6"
regex = "1.8.1"