[package]
name = "client"
version = "0.1.0"
authors = ["Timo Wuttke <timo.wuttke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.17"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.4"
anyhow = "1.0.70"
kube = { version = "0.82.2", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
rcgen = "0.10.0"
base64 = "0.21.0"