[package]
name = "playground"
version = "0.1.0"
authors = ["Timo Wuttke <timo.wuttke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-service = "2.0.2"
actix-rt = "2.7.0"
futures = "0.3.24"
actix-cors = "0.6.2"
env_logger = "0.9"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
serde_with = "1.9.4"